@@ -5,13 +5,13 @@ all_from 'lib/DBIx/Class/Relationship/Predicate.pm';
 author   q{Wallace Reis <wreis@cpan.org>};
 license  'perl';
 
-requires 'DBIx::Class';
-requires 'parent';
-requires 'Sub::Name';
-
 test_requires 'DBD::SQLite';
 test_requires 'Test::More';
 test_requires 'SQL::Translator' => 0.11006;
+
+requires 'DBIx::Class';
+requires 'parent';
+requires 'Sub::Name';
 
 auto_install;
 
