@@ -2,11 +2,6 @@ use strict;
 use warnings;
 use Test::More;
 
-BEGIN {
-    eval "use DBD::SQLite";
-    plan $@
-        ? ( skip_all => 'needs DBD::SQLite for testing' )
-        : ( tests => 1 );
-}
-
 use_ok('DBIx::Class::Relationship::Predicate');
+
+done_testing();
