@@ -2,6 +2,7 @@ Revision history for DBIx::Class::Relationship::Predicate
 
 0.03
 	- tests require SQL::Translator => 0.11006
+	- More tests and some dist fixes
 
 0.02    Sun Nov 29, 2009
         - fixed tests data folder
